Update API docs
